package com.example.demo.application.command;

public interface Command {
	void execute(Command command);
}
