package com.example.demo.web.form;

public class DeleteReserveForm {
	private String id;

	public String getId() {
		return id;
	}

	public void setId(String id) {
		this.id = id;
	}

}
